--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <h1>
   {{title}}
 </h1>
-<ng2-smart-table [settings]="settings" [source]="tableData"></ng2-smart-table>
+<supplier-table></supplier-table>
