--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   {{title}}
 </h1>
 <nav>
+  <a routerLink="/">Home</a>
   <a routerLink="/suppliers">Suppliers</a>
 </nav>
 <router-outlet></router-outlet>
