--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,9 @@
 </h1>
 <nav>
   <a routerLink="/">Home</a>
-  <a routerLink="/suppliers">Suppliers</a>
+  <a href="#">Economic Data</a>
+  <a href="#">Supply Chain</a>
+  <a routerLink="/suppliers" routerLinkActive="active">Supply Chain</a>
+  <a href="#">Documents</a>
 </nav>
 <router-outlet></router-outlet>
