Added more directories for more organized files, created initial supplier form

--- a/src/app/app.component/app.component.html
+++ b/src/app/app.component/app.component.html
@@ -4,8 +4,8 @@
 <nav>
   <a routerLink="/">Home</a>
   <a href="#">Economic Data</a>
-  <a href="#">Supply Chain</a>
   <a routerLink="/suppliers" routerLinkActive="active">Supply Chain</a>
+  <a href="#">Service Providers</a>
   <a href="#">Documents</a>
 </nav>
 <router-outlet></router-outlet>
