--- a/src/app/suppliers-page/suppliers-page.component.html
+++ b/src/app/suppliers-page/suppliers-page.component.html
@@ -3,5 +3,6 @@
   <p>{{description}}</p>
 </div>
 <div class="container">
-  <supplier-table></supplier-table>
+  <supplier-table [tableData]="rowData" [tableSettings]="tableSettings"></supplier-table>
 </div>
+
