--- a/src/app/supplier-directory-page/supplier-directory-page.component.html
+++ b/src/app/supplier-directory-page/supplier-directory-page.component.html
@@ -3,7 +3,7 @@
   <div>
     <p>{{description}}</p>
   </div>
-  <div class="container">
+  <div class="container table-wrapper">
     <data-display-table [tableData]="rowData" [tableSettings]="tableSettings"></data-display-table>
   </div>
 </div>
