--- a/src/app/app/app.component.html
+++ b/src/app/app/app.component.html
@@ -4,8 +4,8 @@
 <nav>
   <a routerLink="/">Home</a>
   <a href="#">Economic Data</a>
-  <a routerLink="/suppliers" routerLinkActive="active">Supply Chain</a>
-  <a routerLink="/service-providers" routerLinkActive="active">Service Providers</a>
+  <a routerLink="/svc-dir-page" routerLinkActive="active">Service Providers</a>
+  <a routerLink="/svc-detail-page" routerLinkActive="active">Service Provider Detail</a>
   <a href="#">Documents</a>
 </nav>
 <router-outlet></router-outlet>
