--- a/src/app/svcDetail/svcDetail.component.less
+++ b/src/app/svcDetail/svcDetail.component.less
@@ -1,3 +1,11 @@
 .wrapper {
   margin: 25px;
 }
+
+.content {
+  .hq {
+    width: 25px;
+    display: inline-block;
+    font-weight: bold;
+  }
+}
